# tibacktester

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml  schedule.yml
docs/locales/zh_CN/LC_MESSAGES/: changelog.po  index.po
docs/locales/zh_CN/LC_MESSAGES/notebooks/: 1. Getting Started with Data Sources.po  10. Rotational Trading.po  2. Backtesting a Strategy.po  3. Evaluating with Bootstrap Metrics.po  4. Ranking and Position Sizing.po  5. Writing Indicators.po  6. Training a Model.po  7. Creating a Custom Data Source.po  8. Applying Stops.po  9. Rebalancing Positions.po  FAQs.po
docs/locales/zh_CN/LC_MESSAGES/reference/: pybroker.cache.po  pybroker.common.po  pybroker.config.po  pybroker.context.po  pybroker.data.po  pybroker.eval.po  pybroker.ext.data.po  pybroker.indicator.po  pybroker.log.po  pybroker.model.po  pybroker.po  pybroker.portfolio.po  pybroker.scope.po  pybroker.slippage.po  pybroker.strategy.po  pybroker.vect.po
docs/source/: changelog.rst  index.rst
docs/source/notebooks/: 1. Getting Started with Data Sources.ipynb  10. Rotational Trading.ipynb  2. Backtesting a Strategy.ipynb  3. Evaluating with Bootstrap Metrics.ipynb  4. Ranking and Position Sizing.ipynb  5. Writing Indicators.ipynb  6. Training a Model.ipynb  7. Creating a Custom Data Source.ipynb  8. Applying Stops.ipynb  9. Rebalancing Positions.ipynb  FAQs.ipynb
src/tibacktester/: cache.py  config.py  context.py  data.py  eval.py  indicator.py  log.py  model.py  portfolio.py  scope.py  strategy.py
tests/: fixtures.py  test_scope.py  test_strategy.py
