[project]
name = "tibacktester"
version = "0.1.0"
description = "TI-Backtester, yet another quantitative trading library."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.10.1",
    "alpaca-py>=0.7.2",
    "diskcache>=5.4.0",
    "dotenv>=0.9.9",
    "flake8>=5.0.4",
    "flake8-bugbear>=22.10.25",
    "joblib>=1.2.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.9.1",
    "mypy>=0.982",
    "nbsphinx>=0.8.11",
    "numba>=0.60.0",
    "numpy>=2.0.2",
    "pandas>=2.2.0",
    "progressbar2>=4.1.1",
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "pytest-instafail>=0.4.2",
    "pytest-randomly>=3.12.0",
    "pytest-xdist>=3.0.2",
    "pytz>=2025.2",
    "schedule>=1.2.2",
    "scikit-learn>=1.5.1",
    "scikit-optimize>=0.10.2",
    "seaborn>=0.13.2",
    "sphinx>=5.3.0",
    "sphinx-intl>=2.1.0",
    "sphinx-rtd-theme>=2.0.0",
    "ta-lib==0.6.3",
    "tensorflow>=2.19.0",
    "tqdm>=4.67.1",
    "yahooquery>=2.3.7",
    "yfinance>=0.2.55",
]


[dependency-groups]
dev = [
    "types-pytz>=2025.2.0.20250516",
]



[tool.mypy]
# Python version target
python_version = "3.12"

# Paths to ignore (mypy uses 'exclude' as a regex string, not a list)
exclude = '''
(
    \.bzr|
    \.direnv|
    \.eggs|
    \.git|
    \.git-rewrite|
    \.hg|
    \.ipynb_checkpoints|
    \.mypy_cache|
    \.nox|
    \.pants\.d|
    \.pyenv|
    \.pytest_cache|
    \.pytype|
    \.ruff_cache|
    \.svn|
    \.tox|
    \.venv|
    \.vscode|
    __pypackages__|
    _build|
    buck-out|
    build|
    dist|
    node_modules|
    site-packages|
    venv
)
'''

# Match Ruff's line length for consistency
show_error_codes = true
pretty = true
strict = true

# This is somewhat equivalent to Ruff's dummy variable rule
allow_unused_variables = false
allow_untyped_globals = false

# Use incremental mode (default behavior) — matches Ruff's performance profile
incremental = true

# Allow untyped calls/definitions if you want to relax strictness a bit
# disallow_untyped_calls = true
# disallow_untyped_defs = true

# Cache dir is often already `.mypy_cache` (ignored by Ruff)
cache_dir = ".mypy_cache"

# For ignoring import errors in stub-less external libraries
ignore_missing_imports = true
